--- a/package.json
+++ b/package.json
@@ -8,17 +8,23 @@
     "start": "next start",
     "lint": "next lint"
   },
+  "engines": {
+    "node": ">=16.14.0"
+  },
   "dependencies": {
+    "@alfalab/core-components": "^42.11.0",
+    "next": "latest",
+    "prettier": "^3.0.3",
+    "ramda": "^0.29.1",
     "react": "latest",
-    "react-dom": "latest",
-    "next": "latest"
+    "react-dom": "latest"
   },
   "devDependencies": {
-    "typescript": "latest",
-    "@types/react": "latest",
     "@types/node": "latest",
+    "@types/react": "latest",
     "@types/react-dom": "latest",
     "eslint": "latest",
-    "eslint-config-next": "latest"
+    "eslint-config-next": "latest",
+    "typescript": "latest"
   }
 }
