--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@alfalab/core-components": "^42.11.0",
+    "@types/react-transition-group": "^4.4.7",
     "next": "latest",
     "prettier": "^3.0.3",
     "ramda": "^0.29.1",
